--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-body {background-color: rgb(214, 236, 213);
+body {
+    background-color: rgb(214, 236, 213);
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
