--- a/style.css
+++ b/style.css
@@ -95,3 +95,18 @@ h2{color: #afa54c;
     font-size: 20px;
     
 }
+
+/* Smartphones (600px para baixo) */
+@media only screen and (max-width: 600px) {h1{font-size:20px}
+   }
+/* Dispositivos um pouco maiores, mas ainda pequenos (Pequenos Tablets e Smartphones + largos, 600px para cima) */
+@media only screen and (min-width: 600px) {}
+
+/*Dispostivos Médios (Tablets deitados, 768px para cima) */
+@media only screen and (min-width: 768px) {}
+
+/* Dispostivos Largos (laptops/desktops, 992px para cima) */
+@media only screen and (min-width: 992px) {}
+
+/* Super Largos (Telas maiores laptops, desktops e até TVs, 1200px para cima) */
+@media only screen and (min-width: 1200px) {}
